# badger2040-dvdbounce

./: CMakeLists.txt  LICENSE  README.md  dvdlogo.h  main.cpp
